# esp32-s3-audio

./: CMakeLists.txt  README.md  Readme.txt  scratch_review.md  sdkconfig  sdkconfig.old  vs1053_driver_review.md
.claude/: settings.json  settings.local.json
app/: button.c  button.h  syncTask.c  syncTask.h
common/: std_types.h
config/: config.h
config/application/: animation_config.h  feature_config.h
config/hardware/: button_config.c  button_config.h  gpio_config.c  gpio_config.h  i2c_config.c  i2c_config.h  i2s_config.h  sdcard_config.c  sdcard_config.h  sdmmc_config.c  sdmmc_config.h  spi_config.c  spi_config.h  ssd1306_config.c  ssd1306_config.h  vs1053_config.c  vs1053_config.h
docs/: wiring.md
driver/buffer/: double_buffer.c  double_buffer.h  ring_buffer.c  ring_buffer.h  sync_frame.c  sync_frame.h
driver/button/: button.c  button.h
driver/gpio/: gpio.c  gpio.h
driver/i2c/: i2c.c  i2c.h
driver/max98357a/: max98357a.c  max98357a.h
driver/sdcard/: double_buffer.c  double_buffer.h  sdcard.c
driver/sdmmc/: sdmmc.c  sdmmc.h
driver/spi/: spi.c  spi.h
driver/srm/: srm.c  srm.h
driver/ssd1306/: menu.c  menu.h  oled.c  oled.h  ssd1306.c  ssd1306.h  ssd1306_i2c.c  ssd1306_i2c_new.c  ssd1306_spi.c
driver/vs1053/: vs1053.c  vs1053.h
main/: CMakeLists.txt  audio.c
task/: button.c  button.h  mp3.c  mp3.h  oled.c  oled.h  pcm_player.c  pcm_player.h  player_manager.c  player_manager.h  sdcard.c  sdcard.h  srm.c  srm.h
