idf_component_register(
    SRCS
        "Audio.c"
        "../driver/buffer/double_buffer.c"
        "../driver/buffer/ring_buffer.c"
        "../driver/buffer/sync_frame.c"
        "../driver/ssd1306/menu.c"
        "../driver/ssd1306/ssd1306_i2c.c"
        "../driver/ssd1306/ssd1306_spi.c"
        "../driver/ssd1306/ssd1306.c"
        "../driver/button/button.c"
        "../task/oled.c"
        "../task/sdcard.c"
        "../task/player_manager.c"
        "../task/mp3.c"
        "../driver/srm/srm.c"
        "../driver/vs1053/vs1053.c"
        "../driver/spi/spi.c"
        "../driver/i2c/i2c.c"
        "../driver/gpio/gpio.c"
        "../driver/sdmmc/sdmmc.c"
        "../config/hardware/vs1053_config.c"
        "../config/hardware/ssd1306_config.c"
        "../config/hardware/button_config.c"
        "../config/hardware/gpio_config.c"
        "../config/hardware/i2c_config.c"
        "../config/hardware/sdcard_config.c"
        "../config/hardware/sdmmc_config.c"
        "../config/hardware/spi_config.c"

    INCLUDE_DIRS
        "."
        "../driver/buffer"
        "../driver/ssd1306"
        "../config"
        "../config/hardware"
        "../config/application"
        "../task"
        "../driver/button"
        "../driver/srm"
        "../driver/vs1053"
        "../driver/spi"
        "../driver/i2c"
        "../driver/gpio"
        "../driver/sdmmc"
        "../common"
)